data/derived/comb/progs/unify/prog2645.ml.out
Characters 141-192:
  | _ -> ((c + x' + x'') / 10), ((c + x' + x'') mod 10) :: s
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
